--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
+* {
+  margin: auto;
+}
+
 .App {
-  text-align: center;
+  background-color: whitesmoke;
+  font-family: "Source Code Pro", monospace;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main-container {
+  width: 90%;
+  margin-left: 5%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.wrapper {
+  background-color: black;
   color: white;
+  text-align: center;
+  padding: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.post-container {
+  color: black;
+  padding: 10px;
+  border: 1px solid black;
+  margin: 30px 0px 5px 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title {
+  border-bottom: 1px solid black;
+  font-weight: bolder;
+  color: maroon;
+  padding-bottom: 0.5em;
+  text-decoration: none;
+}
+
+.title:hover {
+  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/squiggle.svg");
+  background-position: bottom;
+  background-repeat: repeat-x;
+  background-size: 5%;
+  border-bottom: 0;
+  text-decoration: none;
+}
+
+.content-container {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  grid-template-columns: 1fr 3fr;
+  column-gap: 20px;
+}
+
+article {
+  width: 90%;
+}
+
+.featuredImage {
+  width: 100%;
+  padding: 10px;
 }
