--- a/src/App.css
+++ b/src/App.css
@@ -3,44 +3,82 @@
 }
 
 .App {
-  background-color: whitesmoke;
   font-family: "Source Code Pro", monospace;
 }
+
 
 .main-container {
   width: 90%;
   margin-left: 5%;
 }
 
+.devtechno {
+  font-size: 46px;
+  -webkit-text-fill-color: 
+  transparent;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: white;
+    text-shadow: 
+              5px 6px maroon,
+              10px 10px #000000;
+}
+
+.site-links {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr 1fr 3fr 5fr;
+  width: 100%;
+  font-size: 18px;
+  text-decoration: none;
+  color: black;
+  padding-top: 20px;
+}
+
+.link-item {
+  border: 1px solid black;
+  padding: 5px;
+  box-shadow: 7px 3px black;
+}
+
+a:link {
+  color: black;
+  cursor: pointer;
+  text-decoration: none;
+  transform: perspective(3px) translateZ(0);
+}
+
+a:visited {
+  color: black;
+}
+
+a:hover {
+  color: maroon;
+  box-shadow: 2px 6px 6px black;
+}
+
 .wrapper {
+  display: grid;
+  align-items: center;
+  justify-items: center;
   background-color: black;
   color: white;
   text-align: center;
-  padding: 15px;
+  padding: 20px;
 }
 
 .post-container {
   color: black;
   padding: 10px;
-  border: 1px solid black;
-  margin: 30px 0px 5px 0px;
+  margin: 50px 0px 5px 0px;
 }
 
 .title {
-  border-bottom: 1px solid black;
   font-weight: bolder;
   color: maroon;
   padding-bottom: 0.5em;
   text-decoration: none;
-}
-
-.title:hover {
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/squiggle.svg");
-  background-position: bottom;
-  background-repeat: repeat-x;
-  background-size: 5%;
-  border-bottom: 0;
-  text-decoration: none;
+  margin-top: 5vh;
 }
 
 .content-container {
@@ -49,6 +87,8 @@
   justify-items: center;
   grid-template-columns: 1fr 3fr;
   column-gap: 20px;
+  box-shadow: 20px 10px black;
+  border: 1px solid black;
 }
 
 article {
